// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage component  renders SearchPage 1`] = `
<div
  className="page-wrapper"
>
  <main
    className="page-header"
  >
    <Logo />
    <SearchBar
      onChange={[Function]}
      onSubmit={[Function]}
      value=""
    />
    <div
      styleName="actions"
    >
      <SearchFilters
        onChange={[Function]}
        value="title"
      />
      <button
        className="standard-button"
        data-qa="search-button"
        onClick={[Function]}
        styleName="find-button"
      >
        Find
      </button>
    </div>
  </main>
  <MovieListOptions
    moviesCount={0}
    onChange={[Function]}
  />
  <MovieList
    movies={Array []}
  />
</div>
`;

exports[`SearchPage component  should call api action when change filter option 1`] = `
Object {
  "search": "",
  "searchBy": "filter option",
  "sortBy": "",
}
`;

exports[`SearchPage component  should call api action when change search bar text 1`] = `
Object {
  "search": "test search value",
  "searchBy": "title",
  "sortBy": "",
}
`;

exports[`SearchPage component  should call api action when change sort option 1`] = `
Array [
  Array [
    Object {
      "search": "",
      "searchBy": "title",
      "sortBy": "sort option",
    },
  ],
]
`;

exports[`SearchPage component  should call api action when click on find button 1`] = `
Array [
  Array [
    Object {
      "search": "test",
      "searchBy": "title",
      "sortBy": "",
    },
  ],
]
`;
